--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.13.2",
+    "@tailwindcss/postcss": "^4.0.14",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.14"
+    "tailwindcss": "^3.3.5"
   }
 }
