ポケモンデータを取得しJSONファイルとして保存するスクリプトを追加
- リモートURLからイベントポケモンデータをダウンロードする fetch-data.js を作成
- 取得したデータを public フォルダ内の pokemon.json として保存
- データの取得と保存が成功したことを確認するためのコンソールログを追加

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "prebuild": "node scripts/fetch-data.js",
+    "pregenerate": "node scripts/fetch-data.js"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.10.1",
